[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Mundo.gd" type="Script" id=2]
[ext_resource path="res://Roca.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interfaz.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fondo.jpg" type="Texture" id=5]
[ext_resource path="res://corazon minecraft.wav" type="AudioStream" id=6]
[ext_resource path="res://Musica.ogg" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1.58087, -0.710495, 0, 0, 0, 0, 638.142, 0.876907, 0, 0, 0, 0, 641.317, 697.746, 0, 0, 0, 0, -3.16827, 694.571, 0, 0, 0, 0, -1.48584, 0.147064, 0, 0, 0, 0, -1.58087, -0.710495 )
}

[node name="Mundo" type="Node"]
script = ExtResource( 2 )
Roca = ExtResource( 3 )

[node name="Fondo" type="TextureRect" parent="."]
margin_right = 640.0
margin_bottom = 700.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="RocaTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="ScoreTimer" type="Timer" parent="."]

[node name="InicioTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PosicionDeInicio" type="Position2D" parent="."]
position = Vector2( 320, 350 )

[node name="camino" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="RocaPosicion" type="PathFollow2D" parent="camino"]
position = Vector2( -1.58087, -0.710495 )
rotation = 0.00248134

[node name="Interfaz" parent="." instance=ExtResource( 4 )]

[node name="AudioMuerte" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="golpe" from="Player" to="." method="game_over"]
[connection signal="timeout" from="RocaTimer" to="." method="_on_RocaTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="InicioTimer" to="." method="_on_InicioTimer_timeout"]
[connection signal="iniciar_juego" from="Interfaz" to="." method="nuevo_juego"]
